[package]
name = "wireworld-rs"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Wireworld example"
license = "Apache License 2.0"
keywords = ["cellular", "automaton", "life", "conway"]
categories = ["game-development", "mathematics"]
repository = "https://github.com/ManevilleF/wireworld-rs"

[dependencies]

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["render", "bevy_winit", "bevy_asset"]

[dependencies.bevy_life]
version = "0.5"
default-features = false
features = ["2D"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1