[package]
name = "wireworld-rs"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Wireworld example"
license = "Apache License 2.0"
keywords = ["cellular", "automaton", "life", "conway"]
categories = ["game-development", "mathematics"]
repository = "https://github.com/ManevilleF/wireworld-rs"

[dependencies]

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "bevy_render",
    "bevy_color",
    "bevy_winit",
    "bevy_window",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_sprite",
    "multi_threaded",
]

[dependencies.bevy_life]
version = "0.11"
default-features = false
features = ["2D"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
